@@ -1,3 +1,13 @@
+2008-10-20  David Hyatt  <hyatt@apple.com>
+
+        Avoid some stderr spew from CG by checking if we have a decoder yet in ImageSourceCG.
+
+        Reviewed by Darin Adler
+
+        * platform/graphics/cg/ImageSourceCG.cpp:
+        (WebCore::ImageSource::repetitionCount):
+        (WebCore::ImageSource::frameDurationAtIndex):
+
 2008-10-20  Alp Toker  <alp@nuanti.com>
 
         Reviewed by Mark Rowe.
